kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: networkbuster-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: api.networkbuster.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: networkbuster-server-svc
            port:
              number: 3000
  - host: dashboard.networkbuster.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: networkbuster-overlay-svc
            port:
              number: 80
